einstellung_derive/src/snapshots/einstellung_derive__test__output_default_function_signature_mismatch.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- helper ---
pub fn provide_default_port(_env: &str) -> u16 {
    8080
}

// ---------------------------------

/// --- input ---
#[derive(Config)]
struct ServerConfig {
    #[config(default = provide_default_port())]
    port: u16,
}

/// --- output ---
///Partial configuration for the `ServerConfig` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct ServerConfigPartial {
    ///Partial value for the `port` configuration field.
    port: ::core::option::Option<u16>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for ServerConfigPartial {
    type Complete = ServerConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            port: next.port.or(self.port),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(ServerConfig {
            port: self.port.unwrap_or_else(provide_default_port),
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.port).is_some() {
            fields.push(::std::string::String::from("port"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.port).is_none() {
            fields.push(::std::string::String::from("port"));
        }
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for ServerConfig {
    type Partial = ServerConfigPartial;
}
