einstellung_derive/src/snapshots/einstellung_derive__test__output_default_on_flattened_subconfig.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct AppConfig {
    #[config(subconfig, default)]
    #[config(serde(flatten))]
    credentials: CredentialsConfig,
}

/// --- output ---
::core::compile_error! {
    "#[config(default)] is not supported on a flattened subconfig"
}

// ---------------------------------

/// --- input ---
#[derive(Config, Default)]
struct CredentialsConfig {
    api_key: String,
}

/// --- output ---
///Partial configuration for the `CredentialsConfig` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct CredentialsConfigPartial {
    ///Partial value for the `api_key` configuration field.
    api_key: ::core::option::Option<String>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for CredentialsConfigPartial {
    type Complete = CredentialsConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            api_key: next.api_key.or(self.api_key),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(CredentialsConfig {
            api_key: self
                .api_key
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("CredentialsConfig", "api_key"),
                    ),
                )?,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.api_key).is_some() {
            fields.push(::std::string::String::from("api_key"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for CredentialsConfig {
    type Partial = CredentialsConfigPartial;
}
