einstellung_derive/src/snapshots/einstellung_derive__test__output_default_on_option.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct Config4 {
    #[config(merge = "extend", default)]
    x: Option<::std::collections::HashSet<String>>,
}

/// --- output ---
::core::compile_error! {
    "#[config(default = ...)] is meaningless on an `Option` type"
}
