einstellung_derive/src/snapshots/einstellung_derive__test__output_default_on_optional_field.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct Config {
    #[config(default)]
    x: Option<u8>,
}

/// --- output ---
::core::compile_error! {
    "#[config(default = ...)] is meaningless on an `Option` type"
}
