einstellung_derive/src/snapshots/einstellung_derive__test__output_default_value_literal.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct Config {
    #[config(default = 10)]
    x: u32,
}

/// --- output ---
///Partial configuration for the `Config` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct ConfigPartial {
    ///Partial value for the `x` configuration field.
    x: ::core::option::Option<u32>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for ConfigPartial {
    type Complete = Config;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self { x: next.x.or(self.x) })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Config {
            x: self.x.unwrap_or_else(|| 10),
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.x).is_some() {
            fields.push(::std::string::String::from("x"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.x).is_none() {
            fields.push(::std::string::String::from("x"));
        }
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for Config {
    type Partial = ConfigPartial;
}
